[package]
name = "r-efi-string"
version = "0.1.0"
authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
        "Tom Gundersen <teg@jklm.no>"
]
edition = "2018"
keywords = [
        "efi",
        "uefi",
        "boot",
        "firmware",
        "string",
        "ucs-2",
]
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/r-util/r-efi-string"
